kubernetes/03-reverse-proxy-external/books-service.yml
kind: Service
apiVersion: v1
metadata:
  name: books
spec:
  externalName: "docker2.mcbadass.local"
  type: ExternalName
