kubernetes/03-reverse-proxy-external/gogs.yml
kind: Service
apiVersion: v1
metadata:
  name: gogs
spec:
  externalName: "docker2.mcbadass.local"
  type: ExternalName
