kubernetes/03-reverse-proxy-external/landing-service.yml
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: landing
  name: landing
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    k8s-app: landing
