kubernetes/03-reverse-proxy-external/nextcloud.yml
kind: Service
apiVersion: v1
metadata:
  name: nextcloud
spec:
  externalName: "docker2.mcbadass.local"
  type: ExternalName
