kubernetes/03-reverse-proxy-external/books-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: books-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx-ingress-external
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  tls:
  - hosts:
    - books.t-vo.us
    secretName: books-t-vo-us
  rules:
  - host: books.t-vo.us
    http:
      paths:
      - backend:
          serviceName: books
          servicePort: 9083
status:
  loadBalancer: {}
