kubernetes/03-reverse-proxy-external/gogs-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gogs-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx-ingress-external
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  tls:
  - hosts:
    - gogs.t-vo.us
    secretName: gogs-t-vo-us
  rules:
  - host: gogs.t-vo.us
    http:
      paths:
      - backend:
          serviceName: gogs
          servicePort: 10080
status:
  loadBalancer: {}
