kubernetes/03-reverse-proxy-external/landing-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: landing-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx-ingress-external
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/cors-allow-headers: "X-Forwarded-For, X-Real-IP, X-Frame-Options, X-Content-Type-Options, X-Forwarded-Proto"
    nginx.ingress.kubernetes.io/server-snippet: |
      error_page 404 "https://t-vo.us/404.html";
      proxy_intercept_errors on;
spec:
  tls:
  - hosts:
    - t-vo.us
    secretName: t-vo-us
  rules:
  - host: t-vo.us
    http:
      paths:
      - backend:
          serviceName: landing
          servicePort: 80
status:
  loadBalancer: {}
