kubernetes/03-reverse-proxy-external/nextcloud-ingres.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nextcloud-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx-ingress-external
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/cors-allow-headers: "X-Forwarded-For, X-Real-IP, X-Frame-Options, X-Content-Type-Options, X-Forwarded-Proto"
spec:
  tls:
  - hosts:
    - owncloud.t-vo.us
    secretName: owncloud-t-vo-us
  rules:
  - host: owncloud.t-vo.us
    http:
      paths:
      - backend:
          serviceName: nextcloud
          servicePort: 60088
status:
  loadBalancer: {}
